--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,10 @@
-group 'com.proximyst'
+group 'com.coalesce'
 version '1.0-SNAPSHOT'
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'com.github.johnrengelman.shadow'
 
-def kotlin_version = '1.1.2'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -19,7 +18,7 @@ buildscript {
 
     dependencies {
         //noinspection SpellCheckingInspection
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.2"
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
     }
 }
@@ -39,16 +38,24 @@ idea {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.11.2-R0.1-SNAPSHOT'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compileOnly 'org.bukkit:bukkit:1.11.2-R0.1-SNAPSHOT'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.2'
 }
 
 compileKotlin {
-    kotlinOptions {
-        noStdlib = false
-    }
+    kotlinOptions.noStdlib = false
 }
 
 shadowJar {
     archiveName "${rootProject.name}-${rootProject.version}.jar"
+}
+
+jar {
+    manifest {
+        //noinspection GroovyAssignabilityCheck
+        attributes([
+                'Main-Class': 'com.coalesce.kgame.MainKt',
+                'Version': rootProject.version
+        ])
+    }
 }
